# dragonhack2020

./: OurPlugin.osf  Test Plugin.osf  TestPlugin.osf  VIDEO.txt
OurPlugin/: items.json
TestPlugin/: items.json
road-blocker/: .clang-format  CMakeLists.txt  README.md
road-blocker/src/: CMakeLists.txt  main.cpp  read-progress-example.cpp
server/: .gitignore  README.md  main.py  osmand.py  requirements.txt  sentinel.py
